Styles: hide arrow from input type `number`

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,4 +7,11 @@
     font-family: "Noto Sans", sans-serif;
     font-weight: 400;
   }
+  input[type="number"]::-webkit-outer-spin-button,
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"] {
+    -webkit-appearance: none;
+    margin: 0;
+    -moz-appearance: textfield !important;
+  }
 }
